--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,59 @@
+/* * {
+	border: 1px dashed red;
+	min-height: 10px;
+} */
 body {
 	background: lightgrey;
 	margin: 0;
 }
-header {
-	background: white;
-	padding: 10px;
+.post {
+	display: flex;
+	flex-direction: column;
+	background-color: white;
+	width: 500px;
+	margin: 0 auto;
+	border-radius: 10px;
+	margin-top: 20px;
 }
-header h1 {
-	margin: 0px;
+.post-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 10px;
+	height: 35px;
 }
-div.post {
-    background: white;
-	margin-top: 10px;
+.top-left {
+	display: flex;
+
 }
-div.post img {
-	width: 100%;
+.top-right {
+	padding-right: 5px;
 }
-div.post .post-header div:first-child {
-	display: inline-block;
-	width: 80%;
+.post-body {
+	font-family: "Roboto", sans-serif;
+	padding-left: 10px;
+	padding-right: 5px;
+	justify-content: center;
 }
-div.post .post-header div:last-child {
-	display: inline-block;
-	width: 20%;
-	text-align: right;
-	padding: 10px;
-	color: grey;
-}
-div.post h2, 
-div.post p {
-	padding: 10px;
-	margin: 0;
-}
-div.container {
+.container {
 	width: 600px;
 	margin: auto;
+	padding-left: 100px;
 }
-div {
-	box-sizing: border-box;
+header {
+	background: white;
 }
-div.post-header {
-	margin-top: 50px;
+h1 {
+	margin: 0;
+}
+h2 {
+	margin: 0;
+}
+button {
+	border: none;
+	background: none;
+}
+
+img {
+	width: 100%;
 }
